# catala-language-server

./: .gitmodules  README.md  catala-language-server.opam  dune  dune-project  flake.nix
controller/: catalalsp.ml  documentManager.ml  documentManager.mli  dune  lspManager.ml  workspace.ml  workspace.mli
language/: dune  references.ml  references.mli  semanticTokens.ml  typing.ml  typing.mli
lsp/: dune  lspData.ml
parsing/: dune  parser.ml  parser_driver.ml  parser_driver.mli  syntax.ml  syntax.mli
