opam-version: "2.0"
name: "catala-language-server"
maintainer: "Maxime Dénès <maxime.denes@inria.fr>"
authors: [ "Maxime Dénès" ]
license: "MIT"

build: [
  [ "dune" "build" "-p" "catala-language-server" "--display=short"] 
]
depends: [
  "dune" {>= "3.2"}
  "yojson" {>= "1.6.0"}
  "ocamlfind"
  "ppx_inline_test"
  "ppx_assert"
  "ppx_sexp_conv"
  "ppx_yojson_conv" {< "v0.16.0"}
  "ppx_deriving"
  "sexplib"
  "menhirLib"
  "lsp" { >= "1.15"}
  "jsonrpc" { >= "1.15"}
  "sel" {>= "0.4.0"}
]
synopsis: "Catala language server"
description: """
LSP based language server for Catala
"""
